syntax = "proto3";

option csharp_namespace = "FileService";

package fileservice;

service FileService {
    // Upload file with stream
    rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
    
    // Download file with stream
    rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
    
    // Get file info
    rpc GetFileInfo (FileInfoRequest) returns (FileInfo);
    
    // Delete file
    rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
}

message UploadFileRequest {
    oneof data {
        FileMetadata metadata = 1;  // First message contains metadata
        bytes chunk = 2;            // Subsequent messages contain chunks
    }
}

message FileMetadata {
    string filename = 1;
    string content_type = 2;
    int64 file_size = 3;
}

message UploadFileResponse {
    bool storage_type = 1;
    string file_url = 2;
    bool success = 3;
    string error = 4;
}

message DownloadFileRequest {
    string file_id = 1;
}

message DownloadFileResponse {
    oneof data {
        FileMetadata metadata = 1;
        bytes chunk = 2;
    }
}

message FileInfoRequest {
    string file_id = 1;
}

message FileInfo {
    string file_id = 1;
    string filename = 2;
    string content_type = 3;
    int64 file_size = 4;
    string file_url = 5;
    string upload_date = 6;
}

message DeleteFileRequest {
    string file_id = 1;
}

message DeleteFileResponse {
    bool success = 1;
    string error = 2;
}